# financial-data

./: .editorconfig  .isort.cfg  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt  update-requirements.sh
.github/workflows/: pre-commit.yml  publish.yml  template-sync.yml  test.yml  update-data.yml
financialdata/: __init__.py  download.py
output/: A.parquet  AAL.parquet  AAP.parquet  AAPL.parquet  ABBV.parquet  ABC.parquet  ABMD.parquet  ABT.parquet  ACN.parquet  ADBE.parquet  ADI.parquet  ADM.parquet  ADP.parquet  ADSK.parquet  AEE.parquet  AEP.parquet  AES.parquet  AFL.parquet  AIG.parquet  AIZ.parquet  AJG.parquet  AKAM.parquet  ALB.parquet  ALGN.parquet  ALK.parquet  ALL.parquet  ALLE.parquet  AMAT.parquet  AMCR.parquet  AMD.parquet  AME.parquet  AMGN.parquet  AMP.parquet  AMT.parquet  AMZN.parquet  ANET.parquet  ANSS.parquet  ANTM.parquet  AON.parquet  AOS.parquet  (+482 more)
{{ cookiecutter.package }}/: __init__.py
